# ipwis

./: Cargo.toml  KERNEL.md  README.md
.github/workflows/: build-check.yml  code-scanning-devskim.yml
api/: Cargo.toml
api/examples/: hello_world.rs
api/src/: client.rs  lib.rs  resource.rs  server.rs
builder/: Cargo.toml
builder/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
demo/: Cargo.toml
demo/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/api/: Cargo.toml  build.rs
kernel/api/src/: intrinsics.rs  lib.rs  memory.rs
kernel/builder/: Cargo.toml
kernel/builder/src/: lib.rs
kernel/common/: Cargo.toml
kernel/common/src/: data.rs  extrinsics.rs  interrupt.rs  lib.rs  memory.rs  protection.rs  resource.rs  task.rs
kernel/src/: ctx.rs  extrinsics.rs  interrupt.rs  kernel.rs  lib.rs  memory.rs  resource.rs  scheduler.rs  task.rs
modules/codec/: Cargo.toml
modules/codec/api/: Cargo.toml
modules/codec/api/src/: lib.rs
modules/codec/common/: Cargo.toml
modules/codec/common/src/: lib.rs
modules/codec/example/: Cargo.toml
modules/codec/example/src/: main.rs
modules/codec/src/: lib.rs
modules/core/api/: Cargo.toml
modules/core/api/src/: lib.rs  resource_root.rs
modules/core/common/: Cargo.toml
modules/core/common/src/: lib.rs  resource.rs  resource_manager.rs  resource_store.rs
modules/dummy/: Cargo.toml
modules/dummy/api/: Cargo.toml
modules/dummy/api/src/: lib.rs
modules/dummy/common/: Cargo.toml
modules/dummy/common/src/: lib.rs
modules/dummy/example/: Cargo.toml
modules/dummy/example/src/: main.rs
modules/dummy/runner/: Cargo.toml
modules/dummy/runner/src/: main.rs
modules/dummy/src/: lib.rs
modules/ipfis/: Cargo.toml
modules/ipfis/api/: Cargo.toml
modules/ipwis/: Cargo.toml
modules/ipwis/api/: Cargo.toml
modules/ipwis/api/src/: lib.rs
modules/ipwis/common/: Cargo.toml
modules/ipwis/common/src/: lib.rs
modules/ipwis/example/: Cargo.toml
modules/ipwis/example/src/: main.rs
modules/ipwis/src/: lib.rs
modules/spawn/api/: Cargo.toml
modules/spawn/api/src/: lib.rs
modules/spawn/common/: Cargo.toml
modules/spawn/common/src/: lib.rs
modules/stream/api/: Cargo.toml
modules/stream/api/src/: lib.rs
modules/stream/common/: Cargo.toml
modules/stream/common/src/: extrinsics.rs  lib.rs
modules/task/api/: Cargo.toml
modules/task/api/src/: lib.rs  task_instance.rs  task_manager.rs  task_state.rs
modules/task/api/wasi/: Cargo.toml
modules/task/api/wasi/src/: interrupt_handler.rs  interrupt_handler_state.rs  interrupt_manager.rs  interrupt_module.rs  intrinsics.rs  lib.rs  memory.rs  task_ctx.rs  task_manager.rs
modules/task/builder/: Cargo.toml
modules/task/builder/src/: lib.rs
modules/task/common/: Cargo.toml
modules/task/common/src/: lib.rs  task.rs  task_constraints.rs  task_poll.rs  task_resource_constraints.rs
modules/task/common/wasi/: Cargo.toml
modules/task/common/wasi/src/: extern_data.rs  extrinsics.rs  interrupt_id.rs  interrupt_id_wasi.rs  lib.rs
modules/task/demo/: Cargo.toml  build.rs
modules/task/demo/src/: lib.rs  main.rs
pallet/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: main.rs
