[workspace]
members = [
    "modules/codec",
    "modules/codec/api",
    "modules/codec/common",
    "modules/codec/example",
    "modules/dummy",
    "modules/dummy/api",
    "modules/dummy/common",
    "modules/dummy/example",
    "modules/ipwis",
    "modules/ipwis/api",
    "modules/ipwis/common",
    "modules/ipwis/example",
    "pallet",
    "runtime",
]
default-members = ["runtime"]
