[workspace]
resolver = "2"
members = [
    "modules/core/api",
    "modules/core/common",
    "modules/stream/api",
    "modules/stream/common",
    "modules/task/api",
    "modules/task/api/wasi",
    "modules/task/builder",
    "modules/task/common",
    "modules/task/common/wasi",
    "modules/task/demo",
]
# default-members = ["runtime"]
