[package]
name = "ipfis-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ipfis-modules-dummy = { path = "../modules/dummy" }
tokio = { version = "1.17", features = ["full"] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
