[package]
name = "ipwis-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ipwis-modules-dummy = { path = "../modules/dummy" }
ipwis-modules-ipwis = { path = "../modules/ipwis" }
tokio = { version = "1.17", features = ["full"] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
