[package]
name = "ipwis-kernel-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary WASI Interpretation Service"
documentation = "https://docs.rs/ipwis"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipwis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ipwis_kernel_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
ipwis-kernel-common = { path = "../common" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }

wasmtime = { version = "0.38", features = ["cache"] }
wasmtime-wasi = "0.38"

[build-dependencies]
ipwis-kernel-builder = { path = "../builder" }
