[package]
name = "ipwis-modules-task-api-wasi"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary WASI Interpretation Service"
documentation = "https://docs.rs/ipwis"
license = "MIT OR Apache-2.0"
readme = "../../../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipwis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis", features = [
    "derive",
] }
ipwis-modules-core-common = { path = "../../../core/common" }
ipwis-modules-task-api = { path = ".." }
ipwis-modules-task-common = { path = "../../common" }
ipwis-modules-task-common-wasi = { path = "../../common/wasi" }

bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }
wasmtime = { version = "0.38", features = ["cache"] }
wasmtime-wasi = "0.38"
